--- a/styles/ProjectCard.module.scss
+++ b/styles/ProjectCard.module.scss
@@ -5,10 +5,10 @@
   display: flex;
   box-shadow: 4px 4px 15px 1px rgba(0, 0, 0, 0.1);
   background: #D2F3F4;
-}
 
-.project:nth-child(even) {
-  flex-direction: row-reverse;
+  &:nth-child(even) {
+    flex-direction: row-reverse;
+  }
 }
 
 .content {
@@ -16,28 +16,28 @@
   flex: 1;
   padding: 3rem 4rem;
   font-weight: 400;
-}
 
-.content > span {
-  background: $light;
-  font-size: 1.2rem;
-  padding: 0.5rem;
-}
+  > span {
+    background: $light;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+  }
 
-.content > h3 {
-  text-transform: uppercase;
-  margin: 1rem 0;
-  font-size: 4rem;
-  font-weight: 700;
-}
+  > h3 {
+    text-transform: uppercase;
+    margin: 1rem 0;
+    font-size: 4rem;
+    font-weight: 700;
+  }
 
-.content > p {
-  margin: 2.6rem 0;
-  font-size: 1.6rem;
-}
+  > p {
+    margin: 2.6rem 0;
+    font-size: 1.6rem;
+  }
 
-.content > a {
-  margin: 0;
+  > a {
+    margin: 0;
+  }
 }
 
 .cover {
@@ -45,11 +45,12 @@
   position: relative;
   height: 100%;
   width: 50%;
+
+  img {
+    object-fit: cover;
+  }
 }
 
-.cover img {
-  object-fit: cover;
-}
 
 /* SMALL DEVICES */
 @media only screen and (max-width: 767px) {
@@ -58,21 +59,24 @@
     height: fit-content;
   }
 
-  .content > span {
-    font-size: 1.5rem;
-  }
+  .content {
+    > span {
+      font-size: 1.5rem;
+    }
 
-  .content > h3 {
-    margin-top: 2rem;
-    line-height: 105%;
-  }
+    > h3 {
+      margin-top: 2rem;
+      line-height: 105%;
+    }
 
-  .content > p {
-    margin: 1.8rem 0;
-    font-size: 1.9rem;
-  }
-  .content > a {
-    width: 100%;
+    > p {
+      margin: 1.8rem 0;
+      font-size: 1.9rem;
+    }
+
+    > a {
+      width: 100%;
+    }
   }
 
   .cover {
